# s2-geometry-library

./: CMakeLists.txt  ProjectHome.md  README.md
geometry/: hash.h  s2.cc  s2.h  s2cellid.cc  s2cellid.h  s2edgeindex.cc  s2edgeindex.h  s2loop.cc  s2loop.h  s2polygon.cc  s2polygonbuilder.cc  s2polygonbuilder.h  s2polyline.cc  s2regioncoverer.cc
geometry/base/: basictypes.h  logging.h  logging2.h  macros2.h
geometry/strings/: split.cc  stringprintf.cc  strutil2.cc  strutil2.h
geometry/util/coding/: coder.h
geometry/util/hash/: hash.cc  hash.h
geometry/util/math/: mathlimits.h  mathutil.cc
geometry/util/math/exactfloat/: exactfloat.cc
python-bindings/: geometry_s2.cpp  s2_geometry.cpp
